# ah-receipt-splitter

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  config.py  docker-compose.yml  i18n.py  pyproject.toml  receipt_parser.py  report.py  requirements-dev.txt  requirements.txt  state.py  theme.py  translator.py
.github/workflows/: ci.yml
components/: __init__.py  language.py  review.py  summary.py  upload.py
scripts/: generate_sample_receipt.py
tests/: conftest.py  test_parser.py  test_report.py  test_translator.py
